# pedestrian-tracking

./: .gitignore  README.md  detect_object.py  detect_person_image.py  pedestrian_tracker.py  pyproject.toml  requirements.txt  sort.py  test_tracker.sh
model/: person.data  yolov4-tiny-custom.cfg
