[tool.poetry]
name = "pedestrian-tracking"
version = "0.1.0"
description = ""
authors = ["dipzza <dipzza@disroot.org>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
spyder-kernels = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
